--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+storage.location = mediafiles
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
